# GTest-CLion-example

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README_my.md  gtest.md  gtestmaiin.cpp  main.cpp
googletest/: README.my.md
googletest/make/: sample1_unittest
src/: gtestmain.cpp
test/: CMakeLists.txt
test/samples/: sample2_unittest.cc
